--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,51 +1,222 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Authentication with Paystack and Buy Data/Airtime</title>
+  <script src="https://js.paystack.co/v1/inline.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f0f0;
+    }
 
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
+    .container {
+      max-width: 600px;
+      margin: 50px auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    h2 {
+      text-align: center;
+      color: #333;
+    }
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    .form-group {
+      margin-bottom: 15px;
+    }
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+    .form-group label {
+      font-size: 14px;
+      color: #333;
+    }
 
-jobs:
-  # Build job
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+    .form-group input, .form-group select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    .action-button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 100%;
+      font-size: 16px;
+    }
+
+    .action-button:hover {
+      background-color: #45a049;
+    }
+
+    .link {
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .link a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    .link a:hover {
+      text-decoration: underline;
+    }
+
+    .message {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 16px;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h2>User Authentication & Transactions</h2>
+
+    <!-- Login Form -->
+    <div id="login-form">
+      <div class="form-group">
+        <label for="login-email">Email:</label>
+        <input type="email" id="login-email" placeholder="Enter your email">
+      </div>
+      <div class="form-group">
+        <label for="login-password">Password:</label>
+        <input type="password" id="login-password" placeholder="Enter your password">
+      </div>
+      <button class="action-button" onclick="loginUser()">Login</button>
+      <div class="link">
+        <p>Don't have an account? <a href="#" onclick="showSignupForm()">Sign up</a></p>
+      </div>
+    </div>
+
+    <!-- Signup Form -->
+    <div id="signup-form" style="display: none;">
+      <div class="form-group">
+        <label for="signup-email">Email:</label>
+        <input type="email" id="signup-email" placeholder="Enter your email">
+      </div>
+      <div class="form-group">
+        <label for="signup-password">Password:</label>
+        <input type="password" id="signup-password" placeholder="Enter your password">
+      </div>
+      <button class="action-button" onclick="signupUser()">Sign Up</button>
+      <div class="link">
+        <p>Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
+      </div>
+    </div>
+
+    <!-- Data and Airtime Purchase Form -->
+    <div id="purchase-form" style="display: none;">
+      <h3>Purchase Data or Airtime</h3>
+      <div class="form-group">
+        <label for="purchase-type">Select Purchase Type:</label>
+        <select id="purchase-type">
+          <option value="data">Buy Data</option>
+          <option value="airtime">Buy Airtime</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="purchase-amount">Enter Amount (₦):</label>
+        <input type="number" id="purchase-amount" placeholder="Enter amount">
+      </div>
+      <button class="action-button" onclick="processPurchase()">Purchase</button>
+      <div class="message" id="purchase-message"></div>
+    </div>
+
+    <!-- Payment Button -->
+    <button class="action-button" id="paystack-button" style="display: none;">Pay with Paystack</button>
+
+    <div class="message" id="message"></div>
+  </div>
+
+  <script>
+    // Function to switch to login form
+    function showLoginForm() {
+      document.getElementById('signup-form').style.display = 'none';
+      document.getElementById('login-form').style.display = 'block';
+      document.getElementById('paystack-button').style.display = 'none';
+      document.getElementById('purchase-form').style.display = 'none';
+    }
+
+    // Function to switch to signup form
+    function showSignupForm() {
+      document.getElementById('login-form').style.display = 'none';
+      document.getElementById('signup-form').style.display = 'block';
+      document.getElementById('paystack-button').style.display = 'none';
+      document.getElementById('purchase-form').style.display = 'none';
+    }
+
+    // Simulating user login
+    function loginUser() {
+      var email = document.getElementById('login-email').value;
+      var password = document.getElementById('login-password').value;
+      
+      if (email && password) {
+        document.getElementById('message').innerHTML = "Login Successful!";
+        document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after login
+      } else {
+        document.getElementById('message').innerHTML = "Please fill all fields.";
+      }
+    }
+
+    // Simulating user signup
+    function signupUser() {
+      var email = document.getElementById('signup-email').value;
+      var password = document.getElementById('signup-password').value;
+      
+      if (email && password) {
+        document.getElementById('message').innerHTML = "Signup Successful!";
+        document.getElementById('purchase-form').style.display = 'block';  // Show purchase form after signup
+      } else {
+        document.getElementById('message').innerHTML = "Please fill all fields.";
+      }
+    }
+
+    // Function to process purchase (buy data or airtime)
+    function processPurchase() {
+      var purchaseType = document.getElementById('purchase-type').value;
+      var amount = document.getElementById('purchase-amount').value;
+
+      if (amount && purchaseType) {
+        document.getElementById('purchase-message').innerHTML = "Processing your " + purchaseType + " purchase of ₦" + amount;
+        document.getElementById('paystack-button').style.display = 'block';  // Show payment button after selection
+      } else {
+        document.getElementById('purchase-message').innerHTML = "Please fill all fields.";
+      }
+    }
+
+    // Paystack payment integration
+    document.getElementById('paystack-button').addEventListener('click', function () {
+      var amount = document.getElementById('purchase-amount').value;
+      var handler = PaystackPop.setup({
+        key: 'pk_live_fefa4cab21e99bd551e0979a445038b389d9cfea',  // Live Paystack Public Key
+        email: document.getElementById('login-email').value,    // Logged-in user email
+        amount: amount * 100,         // Amount in kobo (₦25 = 2500 kobo)
+        currency: "NGN",              // Currency (NGN for Naira)
+        callback: function (response) {
+          alert('Payment successful! Transaction reference: ' + response.reference);
+          // Send reference to backend for validation if necessary
+        },
+        onClose: function () {
+          alert('Payment window closed.');
+        }
+      });
+      handler.openIframe();
+    });
+  </script>
+
+</body>
+</html>
